--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ buildNumber.properties
 .idea
 *.iml
 .DS_Store
+*.pdf
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
