added all test cases

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -13,3 +13,23 @@ serenity {
 chrome.switches = """--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
                    --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
                    --incognito;--disable-infobars,--disable-gpu"""
+
+environments {
+  default {
+    baseurl = "https://waarkoop-server.herokuapp.com"
+  }
+  dev {
+    baseurl = "https://waarkoop-server.herokuapp.com"
+  }
+  staging {
+    baseurl = "https://waarkoop-server.herokuapp.com"
+  }
+}
+
+drivers {
+  windows {
+    webdriver.chrome.driver = "src/test/resources/webdriver/windows/chromedriver.exe"
+    webdriver.gecko.driver = "src/test/resources/webdriver/windows/geckodriver.exe"
+    webdriver.ie.driver = "src/test/resources/webdriver/windows/IEDriverServer.exe"
+  }
+  }
